# convert_to

./: .gitignore  README.md  pyproject.toml
src/domain/pdf_to_docx/adapters/: pdf2docx.py
src/domain/pdf_to_docx/entities/: docx_entity.py  pdf_entity.py
src/domain/pdf_to_docx/interfaces/: pdf_to_docx_interface.py
src/domain/pdf_to_docx/services/: pdf_to_docx_service.py
tests/domain/pdf_to_docx/services/: test_pdf_to_docx_service.py
tests/entities/: test_docx_entity.py  test_pdf_entity.py
